--- a/index.html
+++ b/index.html
@@ -3,15 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
     <title>Project2</title>
 </head>
 <body>
     <header>
-        <articl class="">
+      <section class="block_1">
 
-        </articl>
+
+          <div class="bg1">
+              <div class="text_na_bg1">
+                  <h1>BU Dev Studio</h1>
+                  <p>Проект по разроботке программного обеспечения от BIONIC University</p>
+              </div>
+          </div>
+
+
+
+
+          <img class="logo_nav_a" src="img/logo.png" alt="logo">
+
+
+
+
+
+        <div class="fullwrap_a">
+            <input id="btn_menu_a" type="checkbox">
+            <label for="btn_menu_a"><img src="img/menu_respon.png" alt="menu"></label>
+            <nav class="navigation_a">
+                <ul class="menu_a">
+                    <li class="tabs_menu_a"><a href="#">BU Dev Studio</a></li>
+                    <li class="tabs_menu_a"><a href="#">Интернатура</a></li>
+                    <li class="tabs_menu_a"><a href="#">Технологии</a></li>
+                    <li class="tabs_menu_a"><a href="#">Портфолио</a></li>
+                    <li class="tabs_menu_a"><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
+      </section>
     </header>
+
+
+    <section class="block_2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab est id ipsam nesciunt nulla odio quam sunt ullam. Accusantium consequuntur excepturi fugiat labore reiciendis similique. Ab commodi, debitis deserunt dolor error explicabo facere fuga, ipsa ipsam laboriosam nulla quas quibusdam quis quo ratione sunt unde voluptate voluptatem? Beatae dicta dolor dolorem in iusto odio, quisquam quo repellat sequi suscipit? Adipisci amet aut cum cupiditate deserunt dicta dignissimos dolore esse ex, fugit harum id iure neque non obcaecati officiis optio porro praesentium quae, quam qui quisquam quo ratione rem reprehenderit sed soluta sunt suscipit tempore temporibus vel voluptas voluptatem voluptatum. Ea facere in mollitia sint suscipit voluptatem. Cupiditate distinctio dolor doloribus, earum facere id illum officiis quo ratione repudiandae! Assumenda cumque, debitis dolores, ea error est fuga itaque magnam molestias nam nemo pariatur praesentium tempora ullam voluptas? Deleniti dolorum ea, et eum fugiat ipsa nesciunt quae, quidem quis quos ratione reprehenderit rerum totam voluptas voluptatum. Deserunt dignissimos dolores eligendi eveniet ex hic illo incidunt molestias quo ullam. Adipisci alias deleniti dolores, enim eum facere fuga iure laboriosam laudantium, odio officia officiis, omnis reprehenderit! Ad iusto magnam nisi nostrum obcaecati quam recusandae! Enim expedita hic iusto magnam quae quidem repudiandae totam voluptatem? Autem distinctio eaque, eos explicabo, facilis fugiat itaque iusto laborum magnam necessitatibus nostrum odit perspiciatis quod veniam voluptatem. Accusantium adipisci aperiam aspernatur beatae, corporis cupiditate dolorem doloribus explicabo fugiat, itaque libero nisi quam quia quos tenetur voluptatem, voluptates. Aut cumque cupiditate deleniti facere, iste nemo nostrum quae temporibus totam? Aliquam aperiam debitis doloremque dolores, ducimus eos error est quaerat quidem reiciendis rem reprehenderit, repudiandae temporibus voluptatem voluptates. Ad, amet asperiores consequatur eligendi fugit hic incidunt non possimus, provident rerum similique totam, voluptatem. Aliquam dolore doloremque expedita minus nesciunt, odit omnis quae quas qui quibusdam recusandae reprehenderit, similique soluta suscipit veniam? Alias aliquid amet architecto aspernatur atque aut cupiditate, ea eius esse ex exercitationem explicabo facilis harum incidunt inventore, laborum magnam, nesciunt non nostrum nulla quaerat quasi repudiandae rerum sed similique sit ullam voluptatum. Alias, amet blanditiis corporis deleniti dolores eum expedita facere ipsam iure minus nobis numquam odit omnis pariatur placeat quisquam repudiandae sequi, sit, ullam voluptatibus. Accusantium, consectetur earum ex fuga ipsum tempora ullam veniam. Ab alias aliquam amet blanditiis dolore ducimus excepturi, fugiat, id iusto laborum maiores molestias, nulla odit possimus qui reiciendis reprehenderit rerum similique sit tempora tenetur veniam vero! Adipisci architecto beatae blanditiis corporis, debitis dolorem dolores eaque esse harum hic inventore iusto molestias nihil nobis odio omnis optio placeat quo quod repudiandae sequi similique soluta sunt unde ut vero voluptates voluptatibus. Ad eos eveniet minus nisi pariatur quis, soluta sunt tempora veritatis! Alias, aliquam, amet aperiam distinctio dolores earum fugiat in ipsam ipsum nobis quae quos totam ullam. Dolor est illum, ipsam neque placeat sit temporibus voluptates. A assumenda autem consequuntur dignissimos dolores dolorum eius eos error ex explicabo fugit hic illo iure, iusto necessitatibus neque nesciunt nobis odit officia placeat quae quaerat quia quis temporibus totam, velit voluptates. Distinctio dolorum earum error exercitationem, in iure laboriosam molestias nobis praesentium, quasi ratione sequi suscipit, unde. Adipisci, aliquid commodi dolores hic id illo ipsum, iusto minus non quas quia rem repellat repudiandae soluta tempora tempore ullam. Aliquid amet aperiam beatae, consectetur, cumque delectus dicta earum eveniet modi mollitia nemo quam quas reiciendis temporibus tenetur unde voluptatem. Aliquam asperiores aspernatur assumenda debitis esse ex harum hic ipsa laudantium, necessitatibus obcaecati omnis quas quasi quidem repudiandae tempore veniam voluptate voluptates. Ab assumenda, cum cupiditate dolorum explicabo necessitatibus nostrum optio perspiciatis, porro quasi reiciendis repellendus sequi sit. Architecto aut deserunt, doloribus dolorum earum esse in molestiae pariatur quae sint. A, ad cupiditate eum nihil officia repudiandae velit vitae. Aperiam aut commodi corporis culpa cumque deserunt eveniet ex hic magni modi neque odit provident qui ratione, sint suscipit tempora voluptate. Commodi consectetur dicta, ea enim iusto molestiae odio quis rerum. Accusantium, aliquam amet asperiores consectetur delectus dicta dolorum ducimus esse est eum iste laborum laudantium magnam maxime minima molestias natus necessitatibus nemo nesciunt obcaecati praesentium quos sint sunt vel, voluptas. Architecto facere quas reprehenderit rerum. Alias aperiam blanditiis delectus dolore dolores ea exercitationem, explicabo fugiat id iure maiores maxime mollitia, nemo non odio pariatur perferendis provident quibusdam quidem quisquam rem, repellat sequi soluta tenetur veritatis vero vitae. Ab, accusantium ad asperiores assumenda atque beatae cum delectus dolore eos est hic illum ipsum laboriosam laborum libero maxime minima minus nesciunt nihil nisi nobis nostrum obcaecati placeat possimus ratione reiciendis, totam velit veritatis voluptates voluptatum. Accusantium aliquid aspernatur aut consequuntur debitis dolores ducimus esse eum incidunt, inventore minima neque obcaecati odit, optio quae quod ratione recusandae reprehenderit, similique sunt totam voluptas voluptates. Adipisci aliquam consequuntur debitis doloremque dolores est et eveniet facilis inventore ipsam itaque, mollitia nostrum obcaecati odio omnis quasi saepe sit ut velit veniam! Blanditiis iusto laborum laudantium natus possimus! Delectus eos eum fugit impedit molestias neque possimus, quasi repellendus saepe tempore. Accusamus aperiam earum voluptatum. Adipisci aperiam aspernatur consequuntur deserunt dolorem facilis fugit impedit ipsum iure labore maiores maxime nesciunt nisi nostrum, omnis pariatur quaerat quibusdam quidem quis ratione repellat reprehenderit sed sequi sint temporibus ullam voluptates! Ducimus, laborum, qui. Accusamus accusantium adipisci aliquam cupiditate, distinctio dolor eaque eos exercitationem facere in ipsam laboriosam laudantium magni minus molestiae mollitia natus, non pariatur provident quis rerum sequi totam ullam velit, vero vitae voluptates? Dicta, nobis suscipit. Amet architecto asperiores, corporis cupiditate delectus dolore doloribus ea ex expedita explicabo harum id maxime nisi nulla numquam officia optio perspiciatis repellendus sapiente soluta sunt, tempora ullam ut. Ducimus et labore quos? Alias aperiam architecto eaque eligendi modi ullam voluptate. Accusamus ad animi aperiam assumenda at atque beatae consequuntur dicta distinctio doloremque dolores ea exercitationem inventore iste itaque laboriosam molestias mollitia natus neque non obcaecati officia, optio pariatur porro quas qui quo reiciendis repellendus reprehenderit repudiandae rerum sequi sint ut vel vitae voluptate voluptates. Assumenda aut beatae commodi culpa dolor harum magnam maxime modi molestiae mollitia placeat quae quasi quisquam, sit veritatis. Aspernatur dolorum ducimus fuga nihil nulla odio quidem quis sapiente temporibus ut!</p>
+    </section>
 </body>
 </html>
