--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
     <section class="block_2">
         <img src="img/meeting-coffee-laptops-1940x900_36390.jpg" alt="img in text">
-        <p>BIONIC University в рамках развития </p>
+        <p>
+            BIONIC University в рамках развития концепции практического обучения запустил собственный проект по разратке програмного обеспечения - BU Dev Studio. Участники проекта работают над продуктом в команде под руководством опытных ти-лидов, таким образом, изучая на практике весь цыкл разработке проекта.
+            <br>
+            Участники а проектах предлагает наличие у кандидатов высокого уровня подготовки и будет только выпусникам BIONIC School. Срок разработки бизнес-решения: 12-15 недель. Команды работают по методологии управления проектами Scrum или Iterative Waterfall. Это вовлекает команду в активное взаимодествие с заказчиком: демо, релизы, обратная связь. Разработка программного продукта в BU Dev Studio дает практический опыт работы над реальными бизнес-задачами.
+        </p>
 </body>
 </html>
