--- a/index.html
+++ b/index.html
@@ -54,5 +54,73 @@
             <br>
             Участники а проектах предлагает наличие у кандидатов высокого уровня подготовки и будет только выпусникам BIONIC School. Срок разработки бизнес-решения: 12-15 недель. Команды работают по методологии управления проектами Scrum или Iterative Waterfall. Это вовлекает команду в активное взаимодествие с заказчиком: демо, релизы, обратная связь. Разработка программного продукта в BU Dev Studio дает практический опыт работы над реальными бизнес-задачами.
         </p>
+    </section>
+
+    <section class="block_3">
+
+
+
+
+
+    </section>
+
+
+    <section class="block_4">
+
+
+
+
+
+    </section>
+
+    <section class="block_5">
+
+
+
+
+
+    </section>
+
+    <section class="block_6">
+        <div class="contact">
+            <h5>Хочешь в интернатуру?</h5>
+            <p class="conntact_p">Пиши нам!</p>
+            <div class="form_contact">
+                <form action="#" name="MyForm">
+                    <p>
+                        <input type="text" placeholder="ИМЯ" required autofocus>
+                    </p>
+                    <p>
+                        <input type="email" placeholder="E-MAIL" required>
+                    </p>
+                    <p>
+                        <input type="tel" placeholder="НОМЕР ТЕЛЕФОНА" maxlength="10">
+                    </p>
+                    <p>
+                        <input type="submit" value="Отправить">
+                    </p>
+                </form>
+            </div>
+        </div>
+    </section>
+
+
+
+    <footer>
+        <div class="left_footer">
+            <p>
+                Copyright &#169; 2012-2016, "Bionic University"
+            </p>
+        </div>
+        <div class="right_footer">
+            <p>
+                Поделись с друзьями
+            </p>
+            <a href="#"><img src="img/facebook_button.png" alt="facebook"></a>
+            <a href="#"><img src="img/vk-share-button.png" alt="vk"></a>
+        </div>
+        <div class="clearfix"></div>
+    </footer>
+
 </body>
 </html>
