--- a/index.html
+++ b/index.html
@@ -66,11 +66,27 @@
 
 
     <section class="block_4">
-
-
-
-
-
+        <div class="txt">
+            <h1 class="int">
+                Интeрнатура в BU Dev Studio - это возможность получить ценный опыт и первый реальный проект в портфолио.
+            </h1>
+            <div class="info">
+                <img src="picture/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде
+                </div>
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+            </div>
+            <div class="info">
+                <img src="picture/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+            </div>
+            <div class="info">
+                <img src="picture/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+            </div>
+        </div>
     </section>
 
     <section class="block_5">
