--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                 Интeрнатура в BU Dev Studio - это возможность получить ценный опыт и первый реальный проект в портфолио.
             </h1>
             <div class="info">
-                <img src="picture/gal.png" alt="">
+                <img src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде
                 </div>
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
             <div class="info">
-                <img src="picture/gal.png" alt="">
+                <img src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
             <div class="info">
-                <img src="picture/gal.png" alt="">
+                <img src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
