Done block №5 Needs: style!!!!

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
     <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>Project2</title>
 </head>
 <body>
@@ -82,10 +83,53 @@
 
 
     <section class="block_4">
-
+        <div class="wrapper">
+            <div class="tabs">
+                <span class="tab">Java</span>
+                <span class="tab">ASP.NET</span>
+                <span class="tab">PHP</span>
+                <span class="tab">Front END</span>
+                <span class="tab">QA+BA</span>
+            </div>
+            <div class="tab_content">
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
     </section>
 
+
+
+
+
     <section class="block_5">
+
+
+
+
 
     </section>
 
@@ -96,7 +140,7 @@
             <div class="form_contact">
                 <form action="#" name="MyForm">
                     <p>
-                        <input type="text" placeholder="ИМЯ" required autofocus>
+                        <input type="text" placeholder="ИМЯ" required >
                     </p>
                     <p>
                         <input type="email" placeholder="E-MAIL" required>
@@ -128,6 +172,16 @@
             <a href="#"><img src="img/vk-share-button.png" alt="vk"></a>
         </div>
     </footer>
+
+
+
+    <script>
+        $(".tab_item").not(":first").hide();
+        $(".wrapper .tab").click(function() {
+            $(".wrapper .tab").removeClass("active").eq($(this).index()).addClass("active");
+            $(".tab_item").hide().eq($(this).index()).fadeIn()
+        }).eq(0).addClass("active");
+    </script>
 
 </body>
 </html>
