--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
+    <script src="js/max.js."></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>Project2</title>
 </head>
