--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
+    <!-- slider bx -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
+<link href="js/jquery.bxslider.css" rel="stylesheet">
+<!-- slider bx finish -->
     <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
     <script src="js/max.js."></script>
@@ -13,6 +16,7 @@
 
     <title>Project2</title>
 </head>
+
 <body>
     <header>
       <section class="block_1">
@@ -123,16 +127,13 @@
             </div>
         </div>
     </section>
-
-
-
-
-
+<!-- slider -->
     <section class="block_5">
-
-
-
-
+    <!-- <div class="slider2">
+                  <div class="slide"><img src="img/slide1.jpg"></div>
+                  <div class="slide"><img src="img/slide2.jpg"></div>
+                  <div class="slide"><img src="img/slide3.jpg"></div>
+            </div> -->
 
     </section>
 
@@ -188,6 +189,17 @@
 
     <script type="text/javascript" src="js/validation/jquery-1.5.2.min.js"></script>
     <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
+<!-- slider -->
+    <script>
+        $(document).ready(function(){
+        $('.slider2').bxSlider({
+        slideWidth: 1200,
+        minSlides: 1,
+        maxSlides: 1,
+        slideMargin: 0
+        });
+        });
+    </script>
 
 
 
