Update bx-slider riss

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- slider bx -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="js/jquery.bxslider.js"></script>
-<link href="js/jquery.bxslider.css" rel="stylesheet">
-<!-- slider bx finish -->
-    <script src="js/mafusail.js"></script>
+    <link href="js/jquery.bxslider.css" rel="stylesheet">
+    <!-- slider bx finish -->
+
+    <!-- <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
-    <script src="js/max.js."></script>
+    <script src="js/max.js."></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
     <title>Project2</title>
@@ -73,17 +73,17 @@
                 <img src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде
                 </div>
+                <div class="txt2">&#9884; Первый реальный проект</div>
+            </div>
+            <div class="info">
+                <img src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Первый реальный проект </div>
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
             <div class="info">
                 <img src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
-                <div class="txt2">&#9884; Взаимодействие в команде</div>
-            </div>
-            <div class="info">
-                <img src="img/gal.png" alt="">
-                <div class="txt2">&#9884; Взаимодействие в команде</div>
-                <div class="txt2">&#9884; Взаимодействие в команде</div>
+                <div class="txt2">&#9884; Первый реальный проект</div>
             </div>
         </div>
     </section>
@@ -129,11 +129,11 @@
     </section>
 <!-- slider -->
     <section class="block_5">
-    <!-- <div class="slider2">
+    <div class="slider2">
                   <div class="slide"><img src="img/slide1.jpg"></div>
                   <div class="slide"><img src="img/slide2.jpg"></div>
                   <div class="slide"><img src="img/slide3.jpg"></div>
-            </div> -->
+            </div>
 
     </section>
 
@@ -178,10 +178,7 @@
     </footer>
 
 
-
-
-
-    <script src="js/mafusail.js"></script>
+    <!-- <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
     <script src="js/max.js."></script>
 
@@ -189,7 +186,12 @@
 
     <script type="text/javascript" src="js/validation/jquery-1.5.2.min.js"></script>
     <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
-<!-- slider -->
+
+    <!-- slider -->
+    <!-- slider bx -->
+    <script src="js/jquery.bxslider.js"></script>
+    <!-- slider bx finish --> 
+
     <script>
         $(document).ready(function(){
         $('.slider2').bxSlider({
