--- a/index.html
+++ b/index.html
@@ -70,18 +70,17 @@
                 Интeрнатура в BU Dev Studio - это возможность получить ценный опыт и первый реальный проект в портфолио.
             </h1>
             <div class="info">
-                <img src="img/gal.png" alt="">
-                <div class="txt2">&#9884; Взаимодействие в команде
-                </div>
+                <img class="gal" src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
                 <div class="txt2">&#9884; Первый реальный проект</div>
             </div>
             <div class="info">
-                <img src="img/gal.png" alt="">
+                <img class="gal" src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Первый реальный проект </div>
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
             <div class="info">
-                <img src="img/gal.png" alt="">
+                <img class="gal" src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
                 <div class="txt2">&#9884; Первый реальный проект</div>
             </div>
