complite bottom and add folder fonts

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <input type="tel" name="telephon" placeholder="НОМЕР ТЕЛЕФОНА" >
                     </p>
                     <p>
-                    <input type="submit" name="enter" value="Отправить" />
+                    <input class="form_bottom" type="submit" name="enter" value="Отправить" />
                     </p>
                 </form>
             </div>
