complite bottom and add folder fonts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     <title>Project2</title>
 </head>
-
 <body>
     <header>
       <section class="block_1">
@@ -70,19 +69,20 @@
                 Интeрнатура в BU Dev Studio - это возможность получить ценный опыт и первый реальный проект в портфолио.
             </h1>
             <div class="info">
-                <img class="gal" src="img/gal.png" alt="">
-                <div class="txt2">&#9884; Взаимодействие в команде</div>
-                <div class="txt2">&#9884; Первый реальный проект</div>
-            </div>
-            <div class="info">
-                <img class="gal" src="img/gal.png" alt="">
-                <div class="txt2">&#9884; Первый реальный проект </div>
+                <img src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде
+                </div>
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
             <div class="info">
-                <img class="gal" src="img/gal.png" alt="">
+                <img src="img/gal.png" alt="">
                 <div class="txt2">&#9884; Взаимодействие в команде</div>
-                <div class="txt2">&#9884; Первый реальный проект</div>
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+            </div>
+            <div class="info">
+                <img src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
         </div>
     </section>
@@ -177,11 +177,12 @@
     </footer>
 
 
-    <!-- <script src="js/mafusail.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+
+    <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
     <script src="js/max.js."></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
     <script type="text/javascript" src="js/validation/jquery-1.5.2.min.js"></script>
     <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
@@ -189,18 +190,22 @@
     <!-- slider -->
     <!-- slider bx -->
     <script src="js/jquery.bxslider.js"></script>
-    <!-- slider bx finish --> 
+    <!--&lt;!&ndash; slider bx finish &ndash;&gt; -->
 
     <script>
         $(document).ready(function(){
-        $('.slider2').bxSlider({
-        slideWidth: 1200,
-        minSlides: 1,
-        maxSlides: 1,
-        slideMargin: 0
-        });
+            $('.slider2').bxSlider({
+                slideWidth: 1200,
+                minSlides: 1,
+                maxSlides: 1,
+                slideMargin: 0
+            });
         });
     </script>
+
+
+
+
 
 
 
