--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
-    <script src="js/max.js."></script> -->
+    <script src="js/max.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
     <title>Project2</title>
@@ -179,11 +179,11 @@
 
     <script src="js/mafusail.js"></script>
     <script src="js/riss.js"></script>
-    <script src="js/max.js."></script>
+    <script src="js/max.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>-->
 
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+
     <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
 
     <!-- slider -->
